Export: Fix - In a small window size the button should be aligned to the start of the line when the line breaks.

--- a/core/app/modules/import-export/assets/js/pages/export/export-kit/components/kit-content/kit-content.scss
+++ b/core/app/modules/import-export/assets/js/pages/export/export-kit/components/kit-content/kit-content.scss
@@ -20,10 +20,7 @@ $root: e-app-export-kit-content;
 
 	&__description {
 		color: var(--e-app-export-kit-content-description-color);
-	}
-
-	&__go-pro-button {
-		margin-inline-start: spacing(20);
+		margin-inline-end: spacing(20);
 	}
 
 	&__notice {
